--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminar of Geometric Measure Theory </title>
+    <title>Seminar of Geometric Measure Theory</title>
     <style>
         body {
             line-height: 1.6;
@@ -58,7 +58,9 @@
             vertical-align: top;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #f2f2f2; /* Gray background for header */
+            color: black; /* Black text color */
+            font-weight: bold; /* Make header text bold */
         }
         td a {
             text-decoration: none;
@@ -73,47 +75,46 @@
 
 <header>
     <h1>Seminar of Geometric Measure Theory</h1>
-    <p>Welcome to webpage of GMT!</p>
+    <p>Welcome to the webpage of GMT!</p>
 </header>
 
 <div class="container">
     <section id="teaching">
-        <h2>Fall 2024</h2>
+        <h2>Fall 2024</h2>   
+        In this seminar, we mainly discuss the book "<a href="https://math.stanford.edu/~lms/ntu-gmt-text.pdf" rel="nofollow">Introduction to Geometric Measure Theory</a>" by L. Simon (we take [Sim14] as the abbreviation in the following table). The reading seminar is held mostly every Sunday afternoon from 2 to 4 p.m. at the Jiayibing or Zhihua buildings of Peking University. Sometimes, due to the special schedules of the attendants, the time may change, and the seminar will be held online.
         <table>
+            <thead>
+                <tr>
+                    <th style="text-align: center; vertical-align: middle;">Details of contents</th>
+                    <th style="text-align: center; vertical-align: middle;">Time (Day)</th>
+                    <th style="text-align: center; vertical-align: middle;">Lecturer</th>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">
-                        Chapter 1 and Chapter 2 of "Introduction to Geometric Measure Theory" by L. Simon
-                    </td>
-                    <td style="text-align: center; vertical-align: middle;"> 2024/12/15</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 1 and Ch. 2 of [Sim14]</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/15</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">
-                        Chapter 3 of "Introduction to Geometric Measure Theory" by L. Simon
-                    </td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/22</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">
-                        Chapter 3 of "Introduction to Geometric Measure Theory" by L. Simon
-                    </td>
-                     <td style="text-align: center; vertical-align: middle;">2024/12/26</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/26</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">
-                        Chapter 4 of "Introduction to Geometric Measure Theory" by L. Simon
-                    </td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 4 of [Sim14]</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/28</td>
                     <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
                 </tr>
             </tbody>
         </table>
     </section>
-
-    </div>
+</div>
 
 <footer>
     <p>&copy; GMT, Peking University</p>
