--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
 <header>
-    <h1>Seminar of Geometric Measure Theory</h1>
+    <h1>Seminars of Geometric Measure Theory</h1>
     <p>Welcome to the webpage of GMT!</p>
 </header>
 
