--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminars of Geometric Measure Theory</title>
+    <title>Seminar of Geometric Measure Theory</title>
     <style>
         body {
             line-height: 1.6;
@@ -74,7 +74,7 @@
 <body>
 
 <header>
-    <h1>Seminars of Geometric Measure Theory</h1>
+    <h1>Seminar of Geometric Measure Theory</h1>
     <p>Welcome to the webpage of GMT!</p>
 </header>
 
@@ -92,24 +92,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 1 and Ch. 2 of [Sim14]</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]. Preliminary measure theorem and some result for submanifolds</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/15</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]. Rectifiable sets</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/22</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]</td>
-                    <td style="text-align: center; vertical-align: middle;">2024/12/26</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]. BV functions I: Preliminary results</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/27</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 4 of [Sim14]</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch.  of [Sim14]. BV functions II: Reduced boundary</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/28</td>
-                    <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
+                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
             </tbody>
         </table>
