--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
             </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]. Preliminary measure theorem and some result for submanifolds</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]: Preliminary measure theorem and some results for submanifolds</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/15</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]. Rectifiable sets</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]: Rectifiable sets</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/22</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]. BV functions I: Preliminary results</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]: Preliminary results of BV functions</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/27</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch.  of [Sim14]. BV functions II: Reduced boundary</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch.  of [Sim14]: Reduced boundaries of sets with finite perimeters</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/28</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
