--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]: Preliminary measure theorem and some results for submanifolds</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]: Preliminary measure theory and some results for submanifolds</td>
                     <td style="text-align: center; vertical-align: middle;">2024/12/15</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
