--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .container {
             width: 90%;
-            max-width: 1200px; /* Added max-width for better layout */
+            max-width: 1400px; /* Added max-width for better layout */
             margin: 20px auto;
             background: #ffffff; /* White background for content */
             padding: 20px;
@@ -81,35 +81,46 @@
 <div class="container">
     <section id="teaching">
         <h2>Fall 2024</h2>   
-        In this seminar, we mainly discuss the book "<a href="https://math.stanford.edu/~lms/ntu-gmt-text.pdf" rel="nofollow">Introduction to Geometric Measure Theory</a>" by L. Simon (we take [Sim14] as the abbreviation in the following table). The reading seminar is held mostly every Sunday afternoon from 2 to 4 p.m. at the Jiayibing or Zhihua buildings of Peking University. Sometimes, due to the special schedules of the attendants, the time may change, and the seminar will be held online.
+        In this seminar, we mainly discuss the book "<a href="https://math.stanford.edu/~lms/ntu-gmt-text.pdf" rel="nofollow">Introduction to Geometric Measure Theory</a>" by L. Simon (we take [Sim14] as the abbreviation in the following table). We also have refer the book "<a href="https://www.taylorfrancis.com/books/mono/10.1201/9780203747940/measure-theory-fine-properties-functions-lawrencecraig-evans" rel="nofollow">Measure Theory and Fine Properties of Functions</a>" for complements. The reading seminar is held mostly every Thursday and Sunday afternoon from 2 to 4 p.m. at the Jiayibing or Zhihua buildings of Peking University. Sometimes, due to the special schedules of the attendants, the time may change, and the seminar will be held online.
         <table>
             <thead>
                 <tr>
                     <th style="text-align: center; vertical-align: middle;">Details of contents</th>
-                    <th style="text-align: center; vertical-align: middle;">Time (Day)</th>
+                    <th style="text-align: center; vertical-align: middle;">Time</th>
+                    <th style="text-align: center; vertical-align: middle;">Location</th>
                     <th style="text-align: center; vertical-align: middle;">Lecturer</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]: Preliminary measure theory and some results for submanifolds</td>
-                    <td style="text-align: center; vertical-align: middle;">2024/12/15</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 1 & 2 of [Sim14]: Some results for measure theory and submanifolds</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/15 <br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Underground discussion room of Jiayibing building</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
                     <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]: Rectifiable sets</td>
-                    <td style="text-align: center; vertical-align: middle;">2024/12/22</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/22 <br>13:00-15:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313 of Zhihua buiding</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
                     <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]: Preliminary results of BV functions</td>
-                    <td style="text-align: center; vertical-align: middle;">2024/12/27</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/27 <br>15:00-17:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313 of Zhihua buiding</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;">Ch.  of [Sim14]: Reduced boundaries of sets with finite perimeters</td>
-                    <td style="text-align: center; vertical-align: middle;">2024/12/28</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [Sim14]: Reduced boundaries of sets with finite perimeters</td>
+                    <td style="text-align: center; vertical-align: middle;">2024/12/28 <br>14:00-17:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313 of Zhihua buiding</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 4 of [Sim14]: Theory of rectifiable n-varifolds I</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/1/2 <br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313 of Zhihua buiding</td>
+                    <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
                 </tr>
             </tbody>
         </table>
