--- a/index.html
+++ b/index.html
@@ -82,20 +82,44 @@
                 <tr>
                     <td style="text-align: center; vertical-align: middle;"><a href="https://www.sciencedirect.com/science/article/abs/pii/S0294144916301779" rel="nofollow">[Pac94]</a> by Frank Pacard</td>
                     <td style="text-align: center; vertical-align: middle;">2025/2/20 <br>14:00-16:00</td>
-                    <td style="text-align: center; vertical-align: middle;">Quaternary Hall<br> Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Quaternary Hall, Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
                 </tr>
                 <tr>
                     <td style="text-align: center; vertical-align: middle;">Ch. 1 of [CM11]: The Beginning of the Theory</td>
-                    <td style="text-align: center; vertical-align: middle;">2025/2/23</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/2/23<br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;"><a href="https://www.ams.org/books/memo/0991/" rel="nofollow">[DS11]</a> by Camillo De Lellis, Emanuele Spadaro</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/2/27<br>14:00-17:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 2 of [CM11]: Curvature Estimates and Consequences</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/2<br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;"><a href="https://ems.press/journals/cmh/articles/15884" rel="nofollow">[LMSV11]</a> by Camillo De Lellis, Andrea Marchese, et al.</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/6</td>
                     <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
-                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/s00039-014-0306-3" rel="nofollow">[DS14]</a> by Camillo De Lellis, Emanuele Spadaro</td>
-                    <td style="text-align: center; vertical-align: middle;">2025/2/27</td>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 3 of [CM11]: Weak Convergence, Compactness and Applications</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/9</td>
                     <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;"><a href="https://www.tandfonline.com/doi/full/10.1080/03605302.2013.856916" rel="nofollow">[Wan14]</a> by Kelei Wang</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/13</td>
+                    <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
                 </tr>
               </tbody>
           </table>
