--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Spring 2025</h2>   
         In this seminar, we study some important papers in the research of geometric measure theory, analysis, PDEs, and the book "<a href="https://bookstore.ams.org/gsm-121/" rel="nofollow">A Course in Minimal Surfaces</a>" by Tobias Holck Colding and William P. Minicozzi (abbreviated as [CM11] in the following table). The reading seminar is held mostly every Thursday and Sunday afternoon, which starts from 14:00 at the Zhihua buildings of Peking University. Occasionally, due to the special schedules of the attendees, the time may change, and the seminar may be held online.
         <h3>Attendees</h3>
-                   Haotong Fu (Ph.D. candidate, PKU), Huaijie Wang (Postdoctoral fellow, PKU), and Wei Wang (Ph.D. candidate, PKU).
+                   Haotong Fu (Ph.D. candidate, PKU), Yuning Liu (Professor, NYU Shanghai), Huaijie Wang (Postdoctoral fellow, PKU), and Wei Wang (Ph.D. candidate, PKU).
         
         <h3>Contents of the Seminar</h3>
         <table>
@@ -106,21 +106,43 @@
                 <tr>
                     <td style="text-align: center; vertical-align: middle;"><a href="https://ems.press/journals/cmh/articles/15884" rel="nofollow">[LMSV11]</a> by Camillo De Lellis, Andrea Marchese, et al.</td>
                     <td style="text-align: center; vertical-align: middle;">2025/3/6</td>
-                    <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                 </tr>
                 <tr>
                     <td style="text-align: center; vertical-align: middle;">Ch. 3 of [CM11]: Weak Convergence, Compactness and Applications</td>
-                    <td style="text-align: center; vertical-align: middle;">2025/3/9</td>
-                    <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/9<br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                 </tr>
                 <tr>
                     <td style="text-align: center; vertical-align: middle;"><a href="https://www.tandfonline.com/doi/full/10.1080/03605302.2013.856916" rel="nofollow">[Wan14]</a> by Kelei Wang</td>
-                    <td style="text-align: center; vertical-align: middle;">2025/3/13</td>
-                    <td style="text-align: center; vertical-align: middle;">Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/27<br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                     <td style="text-align: center; vertical-align: middle;">Huaijie Wang</td>
                 </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;">Ch. 4 of [CM11]: Existence Results</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/3/30<br>14:00-16:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;">A result about Willmore functional</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/4/1<br>14:00-17:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 312, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Yuning Liu</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; vertical-align: middle;">Some recent results for harmonic map flows</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/4/2<br>9:00-11:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 312, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                </tr>
+                <td style="text-align: center; vertical-align: middle;"><a href="https://arxiv.org/abs/2411.16048" rel="nofollow">[WZ24]</a> by Wei Wang and Zhifei Zhang</td>
+                    <td style="text-align: center; vertical-align: middle;">2025/4/3<br>14:00-17:00</td>
+                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
               </tbody>
           </table>
     </section>
