--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             display: block; /* Show active section */
         }
         section a {
+            color: #1558d6; /* 悬停时颜色变为更深的蓝色 */
             text-decoration: none; /* 移除默认下划线 */
         }
         section a:hover {
