--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
     <div class="wrapper">
         <!-- Sidebar Navigation -->
         <nav class="sidebar">
-            <h2>Navigation</h2>
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#Spring2025">Spring 2025</a></li>
@@ -141,7 +140,7 @@
                 <!-- Home Section -->
                 <section id="home" class="active">
                     <h2>Home</h2>
-    <p>Welcome to the Seminars of Analysis and Geometric Measure Theory! This seminar series focuses on cutting-edge research in Partial Differential Equations (PDEs) and Geometric Measure Theory. PDEs are fundamental in modeling phenomena across physics, engineering, and biology, addressing problems like fluid dynamics, heat transfer, and wave propagation. Geometric Measure Theory provides tools to study complex geometric structures, such as minimal surfaces and rectifiable sets, with applications in optimization and material science.</p>
+    <p>Welcome to the Seminars of Analysis and Geometric Measure Theory! This seminar series focuses on cutting-edge research in Partial Differential Equations (PDEs) and Geometric Measure Theory. </p>
     <p>This seminar is organized by <a href="https://luisyanka.github.io/WeiWANGmath.github.io/">Wei Wang</a> and his colleagues at Peking University, bringing together researchers and students to explore seminal papers and recent advancements in these fields.</p>
 </section>
                 </section>
