--- a/index.html
+++ b/index.html
@@ -234,6 +234,24 @@
                                 <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                                 <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                             </tr>
+                            <tr>
+                                <td style="text-align: center; vertical-align: middle;"><a href="https://arxiv.org/abs/2406.05877" rel="nofollow">[HJ24]</a> by Yiqi Huang and Wenshuai Jiang</td>
+                                <td style="text-align: center; vertical-align: middle;">2025/5/5<br>14:00-16:00</td>
+                                <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center; vertical-align: middle;"><a href="https://www.jstor.org/stable/24735188?casa_token=5OBxAHVO53wAAAAA%3AFSYajSbR-zzrdWYHHgWyqthIOdPNEn0Hg0JDzUdve9UICIDM8eBAE79ENCvVw4pR8Ux2rpLPnADFWKyy3gzs9ej9PPx-pCJKZf52ijadJXueMS3glQ" rel="nofollow">[LS16]</a> by Camillo De Lellis and Emanuele Spadaro</td>
+                                <td style="text-align: center; vertical-align: middle;">2025/5/8<br></td>
+                                <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center; vertical-align: middle;"><a href="https://arxiv.org/abs/2406.05877" rel="nofollow">[HJ24]</a> by Yiqi Huang and Wenshuai Jiang</td>
+                                <td style="text-align: center; vertical-align: middle;">2025/5/11<br></td>
+                                <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                            </tr>
                         </tbody>
                     </table>
                 </section>
