--- a/index.html
+++ b/index.html
@@ -398,7 +398,13 @@
                             <tbody>       
                                 <tr>
                                     <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/s00222-020-01000-6" rel="nofollow">[PS21]</a> by A. Pigati and D. Stern</td>
-                                    <td style="text-align: center; vertical-align: middle;">2025/9/6 <br>14:00-17:00</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/9/6 <br>14:00-16:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/s00222-020-01000-6" rel="nofollow">[PS21]</a> by A. Pigati and D. Stern</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/9/13 <br>14:00-17:00</td>
                                     <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                                 </tr>
