--- a/index.html
+++ b/index.html
@@ -408,6 +408,18 @@
                                     <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                                     <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
                                 </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/s00222-020-01000-6" rel="nofollow">[PS21]</a> by A. Pigati and D. Stern</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/9/20 <br>14:00-16:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/pl00013453" rel="nofollow">[HT00]</a> by J. E. Hutchinson and Y. Tonegawa</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/9/22 <br>19:00-20:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Underground Discussion Room <br>Jiayibing Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
+                                </tr>
                               </tbody>
                         </table>
                     </section>
