--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                 <tr>
                                     <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/pl00013453" rel="nofollow">[HT00]</a> by J. E. Hutchinson and Y. Tonegawa</td>
                                     <td style="text-align: center; vertical-align: middle;">2025/9/22 <br>19:00-20:30</td>
-                                    <td style="text-align: center; vertical-align: middle;">Underground Discussion Room <br>Jiayibing Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Underground Discussion Room, Jiayibing Building</td>
                                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                                 </tr>
                               </tbody>
