--- a/index.html
+++ b/index.html
@@ -416,8 +416,20 @@
                                 </tr>
                                 <tr>
                                     <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/pl00013453" rel="nofollow">[HT00]</a> by J. E. Hutchinson and Y. Tonegawa</td>
-                                    <td style="text-align: center; vertical-align: middle;">2025/9/22 <br>19:00-20:30</td>
-                                    <td style="text-align: center; vertical-align: middle;">Underground Discussion Room, Jiayibing Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/9/27 <br>14:00-16:00</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/pl00013453" rel="nofollow">[HT00]</a> by J. E. Hutchinson and Y. Tonegawa</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/10/4 <br>14:00-16:00</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://link.springer.com/article/10.1007/pl00013453" rel="nofollow">[HT00]</a> by J. E. Hutchinson and Y. Tonegawa</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/10/11 <br>14:00-16:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                                 </tr>
                               </tbody>
