--- a/index.html
+++ b/index.html
@@ -432,6 +432,18 @@
                                     <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
                                     <td style="text-align: center; vertical-align: middle;">Haotong Fu</td>
                                 </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://projecteuclid.org/journals/acta-mathematica/volume-234/issue-2/Asymptotics-for-2-dimensional-vectorial-Allen-Cahn-systems/10.4310/ACTA.2025.v234.n2.a1.full" rel="nofollow">[Bet25]</a> by F. Bethuel</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/10/18 <br>14:00-16:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center; vertical-align: middle;"><a href="https://projecteuclid.org/journals/journal-of-differential-geometry/volume-118/issue-2/Existence-and-limiting-behavior-of-min-max-solutions-of-the/10.4310/jdg/1622743143.full" rel="nofollow">[Ste21]</a> by D. Stern</td>
+                                    <td style="text-align: center; vertical-align: middle;">2025/11/15 <br>14:00-17:30</td>
+                                    <td style="text-align: center; vertical-align: middle;">Room 313, Zhihua Building</td>
+                                    <td style="text-align: center; vertical-align: middle;">Wei Wang</td>
+                                </tr>
                               </tbody>
                         </table>
                     </section>
